# food-api-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
food/data/: food_delivery.sqlite3
food/data/preload/: menus.json
food/src/: main.py
food/src/app/: __init__.py
food/src/app/admin/: router.py
food/src/app/categories/: router.py
food/src/app/menu/: router.py
food/src/app/order/: response.py  router.py
food/src/app/places/: router.py
food/src/app/restaurants/: router.py
food/src/core/: config.py
food/src/reader/: json.py
food/src/repository/: __init__.py  category_respository.py  database.py  menu_item_repository.py  models.py  schedule_repository.py  setup.py
food/src/routers/: __init__.py
food/src/routers/admin/: router.py
food/src/routers/feedback/: router.py
food/src/routers/menu/: router.py
food/src/routers/places/: responses.py  router.py
food/src/routers/restaurants/: router.py
food/src/schemas/: __init__.py  category.py  composition.py  db_types.py  menu_composition_item.py  menu_item.py  order.py  place.py  restaurant.py  schedule.py
